update web page

--- a/src/main/resources/public/class.html
+++ b/src/main/resources/public/class.html
@@ -79,49 +79,49 @@
                                 <div class="am-form-group">
                                     <label for="class-package" class="am-u-sm-3 am-form-label"><small>Package</small></label>
                                     <div class="am-u-sm-9 ">
-                                        <input type="text" id="class-package" v-model="package" class="am-input-sm" placeholder="package">
+                                        <input type="text" id="class-package" v-model="model.package" class="am-input-sm" placeholder="package">
                                     </div>
                                 </div>
 
                                 <div class="am-form-group">
                                     <label for="class-name" class="am-u-sm-3 am-form-label"><small>Name</small></label>
                                     <div class="am-u-sm-9 ">
-                                        <input type="text" id="class-name" v-model="name" class="am-input-sm" placeholder="name" >
+                                        <input type="text" id="class-name" v-model="model.name" class="am-input-sm" placeholder="name" >
                                     </div>
                                 </div>
 
                                 <div class="am-form-group">
                                     <label for="class-extend" class="am-u-sm-3 am-form-label"><small>Extend</small></label>
                                     <div class="am-u-sm-9 ">
-                                        <input type="text" id="class-extend" v-model="extend" class="am-input-sm" placeholder="extend" >
+                                        <input type="text" id="class-extend" v-model="model.extend" class="am-input-sm" placeholder="extend" >
                                     </div>
                                 </div>
 
                                 <div class="am-form-group">
                                     <label for="class-label" class="am-u-sm-3 am-form-label"><small>Label</small></label>
                                     <div class="am-u-sm-9 ">
-                                        <input type="text" id="class-label" v-model="label" class="am-input-sm" placeholder="label" >
+                                        <input type="text" id="class-label" v-model="model.label" class="am-input-sm" placeholder="label" >
                                     </div>
                                 </div>
 
                                 <div class="am-form-group">
                                     <label for="class-modifier" class="am-u-sm-3 am-form-label"><small>Modifier</small></label>
                                     <div class="am-u-sm-9 ">
-                                        <input type="text" id="class-modifier" v-model="modifier" class="am-input-sm" placeholder="modifier" >
+                                        <input type="text" id="class-modifier" v-model="model.modifier" class="am-input-sm" placeholder="modifier" >
                                     </div>
                                 </div>
 
                                 <div class="am-form-group">
                                     <label for="class-scope" class="am-u-sm-3 am-form-label"><small>Scope</small></label>
                                     <div class="am-u-sm-9 ">
-                                        <input type="text" id="class-scope" v-model="scope" class="am-input-sm" placeholder="scope" >
+                                        <input type="text" id="class-scope" v-model="model.scope" class="am-input-sm" placeholder="scope" >
                                     </div>
                                 </div>
 
                                 <div class="am-form-group">
                                     <label for="class-description" class="am-u-sm-3 am-form-label"><small>Description</small></label>
                                     <div class="am-u-sm-9">
-                                        <textarea class="" rows="5" id="class-description" v-model="description"  placeholder="description"></textarea>
+                                        <textarea class="" rows="5" id="class-description" v-model="model.description"  placeholder="description"></textarea>
                                     </div>
                                 </div>
 
